header + features + about blocks

--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -1,17 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <title><%=title%></title>
+    <meta name="description" content="<%=desc%>" />
+    <meta name="keywords" content="<%=keyw%>" />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link rel="stylesheet" href="css/style.bundle.css" />
+    <link rel="icon" type="image/png" href="favicon/favicon.ico" />
+  </head>
 
-<head>
-  <title><%=title%></title>
-  <meta name="description" content="<%=desc%>">
-  <meta name="keywords" content="<%=keyw%>">
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <link rel="stylesheet" href="css/style.bundle.css" />
-  <link rel="icon" type="image/png" href="favicon/favicon.ico">
-</head>
-
-<body>
-  <header>
-    
-  </header>
+  <body>
+    <header>
+      <div class="header">
+        <div class="header__top">
+          <div class="header__logo">
+            AppSon
+          </div>
+          <nav class="header__nav">
+            <ul class="header__menu">
+              <li><a href="#" class="header__link">Home</a></li>
+              <li><a href="#features" class="header__link">Features</a></li>
+              <li><a href="#pricing" class="header__link">Pricing</a></li>
+              <li><a href="#pages" class="header__link">Pages</a></li>
+              <li><a href="#" class="header__link btn__sign">Sign up</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header__preview">
+          <h1 class="header__title">Best Desktop App for You</h1>
+          <p class="header__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quas
+            ullam beatae quos iste eos illum! Labore sequi dolorem ad excepturi
+            delectus nam expedita, itaque, mollitia fugit, omnis ipsam
+            repudiandae.
+          </p>
+          <div class="header__buttons">
+            <button type="button" class="header__button-left">Download</button>
+            <button type="button" class="header__button-right">
+              Free Trial
+            </button>
+          </div>
+          <div class="header__device">
+            <img src="img/device.png" alt="#" />
+            <a id="scroll-down" class="header__scroll" href="#about">
+              <img src="img/scrool-down.svg" alt="#" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
+</html>
