--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=PT+Serif&family=Poppins:wght@300;400;500&display=swap');
-$font-stack: "Poppins", sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 /*Обнуление*/
 *{
 	padding: 0;
@@ -16,12 +15,15 @@ a:focus,a:active{outline: none;}
 
 nav,footer,header,aside{display: block;}
 
+$font-stack: 'Quicksand', sans-serif;
+
 html,body{
 	height: 100%;
 	width: 100%;
 	font-size: 100%;
-	line-height: 30px;
-	font-size: 18px;
+	line-height: 27px;
+	font-size: 16px;
+	font-family: $font-stack;
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
@@ -39,7 +41,249 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*------------------------------------*/
 
+%btn-blue {
+	padding: 13px 45px;
+	background-color: #0f7bff;
+	color: white;
+	border-radius: 25px;
+	font-size: 16px;
+	font-weight: bold;
+	&:hover {
+		background-color: #0252b4;
+	}
+}
 
-body {
-  font-family: $font-stack;
+%btn-white {
+	padding: 13px 45px;
+	background-color: white;
+	color: #0f7bff;
+	border-radius: 25px;
+	font-weight: bold;
+	font-size: 16px;
+	border: solid 2px #0f7bff;
+	&:hover {
+		background-color: #dfebfa;
+	}
+}
+
+.header {
+	background: url(../img/header_background.png) no-repeat;
+	background-size:cover;
+	&__top {
+		max-width: 1920px;
+		margin: 0 140px;
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 105px;
+	}
+	&__logo {
+		font-size: 36px;
+		color: black;
+		font-weight: bold;
+		padding: 36px 25px;
+		color: white;
+		background-color: rgb(15, 123, 255);
+		border-radius: 0 0 20px 20px;	  
+	}
+	&__nav {
+		display: flex;
+		align-items: center;
+	}
+	&__menu {
+		display: flex;
+	}
+	&__link {
+		color:#929292;
+		text-transform: uppercase;
+		font-weight: bold;
+		margin-right: 40px;
+		&:hover {
+			color:#0063dd;
+		}
+		&.btn__sign {
+			padding: 17px 55px;
+			background-color: #0063dd;
+			color: white;
+			border-radius: 25px;
+			margin-left: 10px;
+			margin-right: -20px;
+			&:hover {
+				background-color: #0252b4;
+			}
+		}	
+	}
+	&__preview {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	&__title {
+		font-size: 36px;
+		font-weight: bold;
+		margin-bottom: 33px;
+	}
+	&__text {
+		width: 650px;
+		text-align: center;
+		justify-content: center;
+		color:#929292;
+		margin-bottom: 35px;
+	}
+	&__buttons {
+		display: flex;
+		margin-bottom: 25px;
+	}
+	&__button-left {
+		@extend %btn-blue;
+		margin-right: 30px;
+		margin-left: 15px;
+	}
+	&__button-right {
+		@extend %btn-white;
+	}
+	&__device {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		position: relative;
+	}
+	&__scroll {
+		position: absolute;
+		bottom: -35px;
+		border: 1px solid transparent;
+		&:hover {
+			border-radius: 50%;
+			border: 1px solid rgba(0, 0, 0, 0.418);
+		}
+	}
+}
+.container {
+	max-width: 1160px;
+	padding: 0 10px 0 20px;
+	margin: 0 auto;
+	position: relative;
+}
+
+.features {
+	padding-top: 165px;
+	padding-bottom: 130px;
+	background-color: #f5fcfd;
+	&__items {
+		display: flex;
+		justify-content: space-between;
+	}
+	&__card {
+		width: 360px;
+		height: 290px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		padding: 40px 30px;
+		margin-right: 10px;
+		background-color: white;
+		border-radius: 5px;
+		box-shadow: 0px 0px 25px rgba(240, 240, 240, 1);
+		&:nth-child(2n) {
+			margin-top: 50px;
+		}
+		&:last-child {
+			margin-right: 0;
+		}  
+	}
+	&__icon {
+		margin-bottom: 20px;
+	}
+	&__title {
+		font-weight: 700;
+		font-size: 18px;
+		margin-bottom: 20px;
+	}
+	&__text {
+		color: #929292;
+		text-align: center;
+	}
+}
+
+.about {
+	position: relative;
+	&__block {
+		position: relative;
+		display: flex;
+		align-items: center;
+		padding-top: 130px;
+		padding-left: 80px;
+		&:nth-child(2n) {
+			flex-direction: row-reverse;
+			padding-left: 0;
+			padding-top: 135px;
+			.about__photos {
+				margin-left: 120px;
+				margin-right: 70px;
+			}
+			.about__background {
+				left: 58%;
+				margin-top: 45px;
+			}
+		}
+	}
+	&__background{
+		position: absolute;
+		top: 0;
+		left: -115px;
+		z-index: -2;
+	}
+	&__photos {
+		display: flex;
+		margin-right: 110px;
+	}
+	&__photo-big {
+		width: 263px;
+		height: 400px;
+		border-radius: 5px;
+		img {
+			width: 100%;
+			height: 100%;
+			border-radius: 5px;
+			object-fit: cover;
+		}
+
+	}
+	&__photo-small {
+		width: 221px;
+		height: 337px;
+		margin-top: 30px;
+		margin-left: -90px;
+		img {
+			width: 100%;
+			height: 100%;
+			border-radius: 5px;
+			object-fit: cover;
+		}
+	}
+	&__descr {
+		display: flex;
+		flex-direction: column;
+
+	}
+	&__title {
+		font-size: 32px;
+		font-weight: bold;
+		margin-bottom: 30px;
+	}
+	&__text {
+		margin-bottom: 30px;
+		color: #929292;
+	}
+	&__more {
+		color: #0f7bff;
+		font-weight: bold;
+		
+		&:after {
+			content: '\27F6';
+			margin-left: 10px;
+		}
+		&:hover {
+			color: #0252b4;
+		}
+	}
 }
