slider+ news+ trial

--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -46,7 +46,7 @@
           </div>
           <div class="header__device">
             <img src="img/device.png" alt="#" />
-            <a id="scroll-down" class="header__scroll" href="#about">
+            <a id="scroll-down" class="header__scroll" href="#pricing">
               <img src="img/scrool-down.svg" alt="#" />
             </a>
           </div>
