--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1,6 +1,6 @@
 <% var data = { title: " ", desc: " ", keyw: " " }; %> <%=
 _.template(require('./../includes/header.html').default)(data) %>
-<section class="features">
+<section class="features" id="features">
   <div class="container">
     <div class="features__items">
       <div class="features__card">
@@ -121,21 +121,14 @@ _.template(require('./../includes/header.html').default)(data) %>
       </div>
       <div class="how-steps__line">
         <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-          <line
-            x1="0"
-            y1="30"
-            x2="500"
-            y2="30"
-            stroke="#0f7bff"
-            stroke-width="1"
-          />
+          <line x1="0" y1="30" x2="500" y2="30" stroke="#0f7bff" stroke-width="1" />
         </svg>
       </div>
     </div>
   </div>
 </section>
 
-<section class="pricing container">
+<section class="pricing container" id="pricing">
   <div class="pricing__desc">
     <h2 class="pricing__title">Pricing Plan</h2>
     <p class="pricing__text">
@@ -143,45 +136,45 @@ _.template(require('./../includes/header.html').default)(data) %>
       repellendus dolor ipsam consequatur dolor ipsam consequatur ipsum dolor sit amet.
     </p>
     <form class="pricing__radiobuttons">
-      <input type="radio" name="rd1" id="pay1" class="radiobutton"/>
-        <label class="radiobutton-label" for="rd1">Monthly</label>
-      
-        <input type="radio" name="rd1" id="pay1" class="radiobutton second"/>
-          <label class="radiobutton-label second" for="rd1">Yearly</label>
+      <input type="radio" name="rd1" id="pay1" class="radiobutton" />
+      <label class="radiobutton-label" for="rd1">Monthly</label>
+
+      <input type="radio" name="rd1" id="pay1" class="radiobutton second" />
+      <label class="radiobutton-label second" for="rd1">Yearly</label>
     </form>
   </div>
-    <div class="pricing__cards">
-      <div class="pricing__card">
-        <div class="pricing__icon">
-          <img src="img/pricing-icon1.svg" alt="#">
-        </div>
-        <h3 class="pricing__type">Standard</h3>
-        <p class="pricing__param">
-          2gb Hosting </br>
-          10 Custom Domain </br>
-          SSD Hosting</br>
-          50 gb Bandwith</br>
-          Free Support
-        </p>
-        <div class="pricing__price">19.00</div>
-        <button class="pricing__button active" >Try Now</button>
+  <div class="pricing__cards">
+    <div class="pricing__card">
+      <div class="pricing__icon">
+        <img src="img/pricing-icon1.svg" alt="#">
       </div>
-      <div class="pricing__card">
-        <div class="pricing__icon">
-          <img src="img/pricing-icon2.svg" alt="#">
-        </div>
-        <h3 class="pricing__type">Premium</h3>
-        <p class="pricing__param">
-          2gb Hosting </br>
-          10 Custom Domain </br>
-          SSD Hosting</br>
-          50 gb Bandwith</br>
-          Free Support
-        </p>
-        <div class="pricing__price">49.00</div>
-        <button class="pricing__button" >Try Now</button>
-      </div>
+      <h3 class="pricing__type">Standard</h3>
+      <p class="pricing__param">
+        2gb Hosting </br>
+        10 Custom Domain </br>
+        SSD Hosting</br>
+        50 gb Bandwith</br>
+        Free Support
+      </p>
+      <div class="pricing__price">19.00</div>
+      <button class="pricing__button active">Try Now</button>
     </div>
+    <div class="pricing__card">
+      <div class="pricing__icon">
+        <img src="img/pricing-icon2.svg" alt="#">
+      </div>
+      <h3 class="pricing__type">Premium</h3>
+      <p class="pricing__param">
+        2gb Hosting </br>
+        10 Custom Domain </br>
+        SSD Hosting</br>
+        50 gb Bandwith</br>
+        Free Support
+      </p>
+      <div class="pricing__price">49.00</div>
+      <button class="pricing__button">Try Now</button>
+    </div>
+  </div>
 </section>
 
 <section class="feedback">
@@ -193,66 +186,132 @@ _.template(require('./../includes/header.html').default)(data) %>
         <p class="feedback__name">Raisa Moni</p>
         <p class="feedback__post">Envano Customer</p>
         <p class="feedback__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero atque maxime minima velit ad dicta.
+          Lorem ipsum dolor sit amet adipisicing elit. Vero atque maxime minima velit ad dicta.
         </p>
       </div>
       <div class="feedback__item">
         <p class="feedback__name">Raisa Moni</p>
         <p class="feedback__post">Envano Customer</p>
         <p class="feedback__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero atque maxime minima velit ad dicta.
+          Lorem ipsum dolor sit amet adipisicing elit. Vero atque maxime minima velit ad dicta.
         </p>
       </div>
       <div class="feedback__item">
         <p class="feedback__name">Raisa Moni</p>
         <p class="feedback__post">Envano Customer</p>
         <p class="feedback__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero atque maxime minima velit ad dicta.
+          Lorem ipsum dolor sit amet adipisicing elit. Vero atque maxime minima velit ad dicta.
         </p>
       </div>
       <div class="feedback__item">
         <p class="feedback__name">Raisa Moni</p>
         <p class="feedback__post">Envano Customer</p>
         <p class="feedback__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero atque maxime minima velit ad dicta.
+          Lorem ipsum dolor sit amet adipisicing elit. Vero atque maxime minima velit ad dicta.
         </p>
       </div>
       <div class="feedback__item">
         <p class="feedback__name">Raisa Moni</p>
         <p class="feedback__post">Envano Customer</p>
         <p class="feedback__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero atque maxime minima velit ad dicta.
+          Lorem ipsum dolor sit amet adipisicing elit. Vero atque maxime minima velit ad dicta.
         </p>
       </div>
       <div class="feedback__item">
         <p class="feedback__name">Raisa Moni</p>
         <p class="feedback__post">Envano Customer</p>
         <p class="feedback__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero atque maxime minima velit ad dicta.
+          Lorem ipsum dolor sit amet adipisicing elit. Vero atque maxime minima velit ad dicta.
         </p>
       </div>
       <div class="feedback__item">
         <p class="feedback__name">Raisa Moni</p>
         <p class="feedback__post">Envano Customer</p>
         <p class="feedback__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero atque maxime minima velit ad dicta.
+          Lorem ipsum dolor sit amet adipisicing elit. Vero atque maxime minima velit ad dicta.
         </p>
       </div>
       <div class="feedback__item">
         <p class="feedback__name">Raisa Moni</p>
         <p class="feedback__post">Envano Customer</p>
         <p class="feedback__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero atque maxime minima velit ad dicta.
+          Lorem ipsum dolor sit amet adipisicing elit. Vero atque maxime minima velit ad dicta.
         </p>
       </div>
       <div class="feedback__item">
         <p class="feedback__name">Raisa Moni</p>
         <p class="feedback__post">Envano Customer</p>
         <p class="feedback__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero atque maxime minima velit ad dicta.
+          Lorem ipsum dolor sit amet adipisicing elit. Vero atque maxime minima velit ad dicta.
         </p>
       </div>
     </div>
+  </div>
+</section>
+
+<section class="news container" id="pages">
+  <h2 class="news__title">Latest News From Us</h2>
+  <p class="news__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. In repellat autem quam magnam veritatis
+    aut itaque sint, voluptatibus nesciunt provident.</p>
+  <div class="news__blocks">
+    <div class="news__block">
+      <article class="news__item-latest">
+        <img src="img/news1.jpg" alt="#" class="news__preview-big">
+        <a href="#">
+          <h3 class="news__subtitle-latest">
+            The master bedroom suite is phenomenally spacious
+          </h3>
+        </a>
+        <p class="news__text-latest">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus quaerat
+          debitis molestiae quisquam laboriosam quod laudantium maiores distinctio recusandae.</p>
+        <a href="#" class="news__item-more">Continue Reading</a>
+      </article>
+    </div>
+    <div class="news__block">
+      <article class="news__item">
+        <img src="img/news2.jpg" alt="#" class="news__preview-min">
+        <div class="news__item-desc">
+          <a href="#">
+            <h3 class="news__subtitle">
+              The master bedroom suite is phenomenally spacious
+            </h3>
+          </a>
+          <p class="news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </article>
+      <article class="news__item">
+        <img src="img/news3.jpg" alt="#" class="news__preview-min">
+        <div class="news__item-desc">
+          <a href="#">
+            <h3 class="news__subtitle">
+              The master bedroom suite is phenomenally spacious
+            </h3>
+          </a>
+          <p class="news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </article>
+      <article class="news__item">
+        <img src="img/news4.jpg" alt="#" class="news__preview-min">
+        <div class="news__item-desc">
+          <a href="#">
+            <h3 class="news__subtitle">
+              The master bedroom suite is phenomenally spacious
+            </h3>
+          </a>
+          <p class="news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </article>
+    </div>
+  </div>
+</section>
+
+<section class="getstarted">
+  <div class="getstarted__block">
+    <div class="getstarted__desc">
+      <h2 class="getstarted__title">Try 30 Days Free Trial</h2>
+      <p class="getstarted__text">No credit card required</p>
+    </div>
+    <button class="getstarted__button">Get Started ⟶</button>
   </div>
 </section>
 
