--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -15,7 +15,7 @@
 
   <body>
     <header>
-      <div class="header">
+      <div class="header" id="header">
         <div class="header__top">
           <div class="header__logo">
             AppSon
