--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1,4 +1,4 @@
-<% var data = { title: " ", desc: " ", keyw: " " }; %> <%=
+<% var data = { title: "AppSon", desc: "Best desktop appp for you", keyw: " " }; %> <%=
 _.template(require('./../includes/header.html').default)(data) %>
 <section class="features" id="features">
   <div class="container">
