--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -1,5 +1,37 @@
 <footer>
-  
+  <div class="footer__subscribe">
+      <div class="footer__logo">
+          AppSon
+      </div>
+      <form class="footer__email">
+        <input type="text" name="email" placeholder="Enter Your Email" class="form__text">
+        <input type="submit" name="button" value="Subscribe" class="form__button">
+    </form>
+  </div>
+  <div class="footer__bottom container">
+      <div class="footer__copyright">
+       @ 2018 Copyright, All Rights Reserved by AppSon
+      </div>
+      <div class="footer__nav">
+          <ul class="footer__menu">
+              <li><a class="footer__link" href="#">Terms & Condition</a></li>
+              <li><a class="footer__link" href="#">Privacy Policy</a></li>
+              <li><a class="footer__link" href="#">Help</a></li>
+          </ul>
+          <div class="footer__social">
+              <a href="#" class="footer__facebook">
+                  <img src="img/fb.svg" alt="#">
+              </a>
+              <a href="#" class="footer__twitter">
+                <img src="img/twitter.svg" alt="#">
+            </a>
+            <a href="#" class="footer__youtube">
+                <img src="img/youtube.svg" alt="#">
+            </a>
+          </div>
+      </div>
+      <a class="footer__scroll" href="#header">↑</a>
+  </div>
 </footer>
 
 <script src="js/bundle.js"></script>
