--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -652,7 +652,6 @@ h6 {
     margin-bottom: 25px;
     font-size: 18px;
     &-latest {
-      color: #0f7bff;
       font-size: 24px;
     }
   }
@@ -684,7 +683,7 @@ h6 {
 
 .getstarted {
 	width: 100%;
-	padding: 133px 0;
+	padding: 128px 0;
 	background-color: #f5fcfd;
 	&__block {
 		display: flex;
@@ -715,4 +714,95 @@ h6 {
 			background-color: #0252b4;
 		}
 	}
+}
+
+footer {
+  background-color: #0f7bff;
+  padding-top: 130px;
+  width: 100%;
+  .footer {
+    &__subscribe {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 130px;
+      border-bottom: 1px solid white;
+    }
+    &__logo {
+      font-size: 36px;
+      color: white;
+      font-weight: 700;
+      margin-bottom: 35px;
+    }
+    &__email {
+      position: relative;
+      left: -80px;
+      .form__text {
+        padding: 18px 30px;
+        width: 400px;
+        border-radius: 30px 0 0 30px;
+        font-size: 16px;
+        color: white;
+        border: 2px solid white ;
+        background-color: #0f7bff;
+        &::placeholder {
+          color: white;
+        }
+      }
+      .form__button {
+        font-size: 16px;
+        padding: 18px 40px;
+        border-radius: 0 30px 30px 0;
+        border: 2px solid white ;
+        position: absolute;
+        color: #0f7bff;
+        text-transform: uppercase;
+        font-weight: 700;
+        cursor: pointer;
+        &:hover {
+          background-color: #c5d1df;
+        }
+      }
+    }
+    &__bottom {
+      display: flex;
+      padding: 40px 0;
+      justify-content: space-between;
+    }
+    &__copyright {
+      color: white;
+    }
+    &__nav {
+      display: flex;
+      justify-content: space-between;
+    }
+    &__menu {
+      display: flex;
+      padding-right: 90px;
+    }
+    &__link {
+      margin-right: 30px;
+      color: #c5d1df;
+      &:hover {
+        color: white;
+      }
+    }
+    &__social {
+      display: flex;
+      align-items: center;
+    }
+    &__facebook,&__twitter {
+      margin-right: 10px;
+    }
+    &__scroll {
+      position: absolute;
+      bottom: 30px;
+      right: -240px;
+      padding: 10px 15px 10px 15px;
+      font-size: 30px;
+      color: #0f7bff;
+      background-color: white;
+      border-radius: 3px;
+    }
+  }
 }
