--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -33,13 +33,8 @@ _.template(require('./../includes/header.html').default)(data) %>
 
 <section class="about container" id="about">
   <div class="about__block">
-    <div class="about__photos">
-      <div class="about__photo-big">
-        <img src="img/image1.jpg" alt="#" />
-      </div>
-      <div class="about__photo-small">
-        <img src="img/image2.jpg" alt="#" />
-      </div>
+    <div class="about__photo">
+      <img src="img/features1.png" alt="#">
     </div>
     <div class="about__descr">
       <h2 class="about__title">Easy Messaging</h2>
@@ -51,18 +46,10 @@ _.template(require('./../includes/header.html').default)(data) %>
       </p>
       <a href="#" class="about__more">Read More</a>
     </div>
-    <div class="about__background">
-      <img src="img/blue-object.svg" alt="#" />
-    </div>
   </div>
   <div class="about__block">
-    <div class="about__photos">
-      <div class="about__photo-big">
-        <img src="img/image3.jpg" alt="#" />
-      </div>
-      <div class="about__photo-small">
-        <img src="img/image4.jpg" alt="#" />
-      </div>
+    <div class="about__photo">
+      <img src="img/features2.png" alt="#">
     </div>
     <div class="about__descr">
       <h2 class="about__title">Keep In Touch</h2>
@@ -73,9 +60,6 @@ _.template(require('./../includes/header.html').default)(data) %>
         laborum quo alias.
       </p>
       <a href="#" class="about__more">Read More</a>
-    </div>
-    <div class="about__background">
-      <img src="img/blue-object.svg" alt="#" />
     </div>
   </div>
 </section>
