--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -249,63 +249,39 @@ h6 {
 
 .about {
   position: relative;
-  margin-bottom: 120px;
+  margin-bottom: -40px;
+  width: 100%;
   &__block {
     position: relative;
     display: flex;
     align-items: center;
-    padding-top: 130px;
-    padding-left: 80px;
+    justify-content: flex-end;
     &:nth-child(2n) {
       flex-direction: row-reverse;
       padding-left: 0;
-      padding-top: 135px;
-      .about__photos {
-        margin-left: 120px;
-        margin-right: 70px;
+      top: -40px;
+      .about__photo {
+        margin-left: 50px;
+        left: 0;
       }
-      .about__background {
-        left: 58%;
-        margin-top: 45px;
+      .about__descr {
+        padding-bottom: 35px;
+        padding-top: 0;
       }
     }
   }
-  &__background {
-    position: absolute;
-    top: 0;
-    left: -115px;
-    z-index: -2;
-  }
-  &__photos {
+  &__photo {
     display: flex;
-    margin-right: 110px;
-  }
-  &__photo-big {
-    width: 263px;
-    height: 400px;
-    border-radius: 5px;
+    position: relative;
+    left: -40px;
     img {
-      width: 100%;
-      height: 100%;
-      border-radius: 5px;
-      object-fit: cover;
-    }
-  }
-  &__photo-small {
-    width: 221px;
-    height: 337px;
-    margin-top: 30px;
-    margin-left: -90px;
-    img {
-      width: 100%;
-      height: 100%;
-      border-radius: 5px;
-      object-fit: cover;
+      object-fit: contain;
     }
   }
   &__descr {
     display: flex;
     flex-direction: column;
+    padding-top: 30px;
   }
   &__title {
     font-size: 32px;
