--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -1,5 +1,6 @@
 <% var data = { title: "AppSon", desc: "Best desktop appp for you", keyw: " " }; %> <%=
 _.template(require('./../includes/header.html').default)(data) %>
+<body>
 <section class="features" id="features">
   <div class="container">
     <div class="features__items">
@@ -66,6 +67,7 @@ _.template(require('./../includes/header.html').default)(data) %>
 
 <section class="how">
   <div class="container">
+    <div class="how__elem"><img  src="img/how-elem.png" alt="#"></div>
     <h2 class="how__title">How Does It Works?</h2>
     <p class="how__text">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero voluptate
@@ -87,7 +89,7 @@ _.template(require('./../includes/header.html').default)(data) %>
         <div class="how-steps__icon">
           <img src="img/step-icon2.svg" alt="#" />
         </div>
-        <h3 class="how-steps__title">Create An Account</h3>
+        <h3 class="how-steps__title">Confirm Email</h3>
         <p class="how-steps__text">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem,
           optio?
@@ -97,16 +99,13 @@ _.template(require('./../includes/header.html').default)(data) %>
         <div class="how-steps__icon">
           <img src="img/step-icon3.svg" alt="#" />
         </div>
-        <h3 class="how-steps__title">Create An Account</h3>
+        <h3 class="how-steps__title">See Results</h3>
         <p class="how-steps__text">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem,
           optio?
         </p>
       </div>
       <div class="how-steps__line">
-        <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-          <line x1="0" y1="30" x2="500" y2="30" stroke="#0f7bff" stroke-width="1" />
-        </svg>
       </div>
     </div>
   </div>
@@ -234,6 +233,7 @@ _.template(require('./../includes/header.html').default)(data) %>
 </section>
 
 <section class="news container" id="pages">
+  <div class="news__elem"><img src="img/how-elem.png" alt="#"></div>
   <h2 class="news__title">Latest News From Us</h2>
   <p class="news__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. In repellat autem quam magnam veritatis
     aut itaque sint, voluptatibus nesciunt provident.</p>
