--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -161,7 +161,7 @@ _.template(require('./../includes/header.html').default)(data) %>
 </section>
 
 <section class="feedback">
-  <img src="img/feedback.png" alt="#" class="feedback__image">
+  <div class="feedback__image"><img src="img/feedback.png" alt="#"></div>
   <div class="feedback__block">
     <h2 class="feedback__title">Trusted By More Than 55M Peoples</h2>
     <div class="feedback__slider">
@@ -298,7 +298,7 @@ _.template(require('./../includes/header.html').default)(data) %>
     <button class="getstarted__button">Get Started ⟶</button>
   </div>
 </section>
-
+</body>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
