--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -95,6 +95,9 @@ h6 {
   &:hover {
     background-color: #0252b4;
   }
+  @media (max-width:1199px) {
+     padding: 13px 25px;   
+  }
 }
 
 %btn-white {
@@ -108,6 +111,9 @@ h6 {
   &:hover {
     background-color: #dfebfa;
   }
+  @media (max-width:1199px) {
+    padding: 13px 25px;   
+ }
 }
 
 .header {
@@ -119,6 +125,9 @@ h6 {
     display: flex;
     justify-content: space-between;
     margin-bottom: 105px;
+    @media (max-width:1199px) {
+      margin: 0 70px;
+      }
   }
   &__logo {
     font-size: 36px;
@@ -128,6 +137,10 @@ h6 {
     color: white;
     background-color: rgb(15, 123, 255);
     border-radius: 0 0 20px 20px;
+      @media (max-width:1199px) {
+        padding: 25px 10px;
+        font-size: 26px;
+        }
   }
   &__nav {
     display: flex;
@@ -135,12 +148,16 @@ h6 {
   }
   &__menu {
     display: flex;
+    padding-left:25px;
   }
   &__link {
     color: #929292;
     text-transform: uppercase;
     font-weight: bold;
     margin-right: 40px;
+    @media (max-width:1199px) {
+        margin-right: 30px;
+    }
     &:hover {
       color: #0063dd;
     }
@@ -154,6 +171,9 @@ h6 {
       &:hover {
         background-color: #0252b4;
       }
+      @media (max-width:1199px) {
+        padding: 13px 25px;
+      }
     }
   }
   &__preview {
@@ -165,6 +185,10 @@ h6 {
     font-size: 36px;
     font-weight: bold;
     margin-bottom: 33px;
+    @media (max-width:1199px) {
+      margin-top: 50px;
+      font-size: 28px;
+   }
   }
   &__text {
     width: 650px;
@@ -172,6 +196,9 @@ h6 {
     justify-content: center;
     color: #929292;
     margin-bottom: 35px;
+    @media (max-width:1199px) {
+      width: 80%;   
+   }
   }
   &__buttons {
     display: flex;
@@ -190,6 +217,10 @@ h6 {
     flex-direction: column;
     align-items: center;
     position: relative;
+    img {
+      width: 100%;
+      object-fit: contain;
+    }
   }
   &__scroll {
     position: absolute;
@@ -203,7 +234,7 @@ h6 {
 }
 .container {
   max-width: 1160px;
-  padding: 0 10px 0 20px;
+  padding: 0 10px;
   margin: 0 auto;
 }
 
@@ -211,6 +242,9 @@ h6 {
   padding-top: 165px;
   padding-bottom: 130px;
   background-color: #f5fcfd;
+  @media (max-width:1199px) {
+    padding: 80px 0;
+ }
   &__items {
     display: flex;
     justify-content: space-between;
@@ -261,25 +295,43 @@ h6 {
       flex-direction: row-reverse;
       padding-left: 0;
       top: -40px;
+      @media (max-width:1199px) {
+        top: 0;  
+     }
       .about__photo {
+        width: 100%;
         margin-left: 50px;
         left: 0;
+        @media (max-width:1199px) {
+          width: 100%; 
+       }
       }
       .about__descr {
         padding-bottom: 35px;
         padding-top: 0;
       }
     }
+    @media (max-width:1199px) {
+      padding: 13px 25px;   
+   }
   }
   &__photo {
+    width: 100%;
     display: flex;
     position: relative;
     left: -40px;
     img {
+      width: 100%;
+      height: 100%;
       object-fit: contain;
     }
+    @media (max-width:1199px) {
+      width: 100%;
+      left: 0;
+   }
   }
   &__descr {
+    width: 50%;
     display: flex;
     flex-direction: column;
     padding-top: 30px;
@@ -288,8 +340,13 @@ h6 {
     font-size: 32px;
     font-weight: bold;
     margin-bottom: 30px;
+    @media (max-width:1199px) {
+      font-size: 28px;
+      margin-bottom: 20px;  
+   }
   }
   &__text {
+    width: 100%;
     margin-bottom: 30px;
     color: #929292;
     width: 555px;
@@ -366,6 +423,10 @@ h6 {
       position: absolute;
       left: 180px;
       top: 50px;
+      @media (max-width:1199px) {
+        width: 65%;
+        left: 150px; 
+     }
     }
   }
 }
@@ -496,14 +557,19 @@ h6 {
 
 .feedback {
   display: flex;
+  align-items: center;
   background-color: #f5fcfd;
   margin-bottom: 80px;
   width: 100%;
   &__image {
-    object-fit: contain;
     margin-right: 130px;
+    img {
+      width: 100%;
+      object-fit: contain;
+    }
   }
   &__block {
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -514,6 +580,7 @@ h6 {
     margin-bottom: 40px;
   }
   &__slider {
+    width: 100%;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-end;
@@ -551,7 +618,6 @@ h6 {
 .slick {
   &-slider {
     min-width: 0;
-    width: 1000px;
   }
   /* Ограничивающая оболочка */
   &-list {
@@ -794,9 +860,8 @@ footer {
       margin-right: 10px;
     }
     &__scroll {
-      position: absolute;
       bottom: 30px;
-      right: -240px;
+      right: 0;
       padding: 10px 15px 10px 15px;
       font-size: 30px;
       color: #0f7bff;
